IMTA-17741: Bump app insights client