@@ -1,12 +1,14 @@
 package uk.gov.defra.tracesx.common.health;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 
+import java.util.ArrayList;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentMatchers;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.boot.actuate.health.Health;
@@ -14,9 +16,6 @@ import org.springframework.dao.DataAccessException;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.SingleColumnRowMapper;
 import uk.gov.defra.tracesx.common.health.checks.JdbcHealthCheck;
-
-import java.util.ArrayList;
-import java.util.Arrays;
 
 @ExtendWith(MockitoExtension.class)
 class JdbcHealthCheckTest {
@@ -26,8 +25,8 @@ class JdbcHealthCheckTest {
   @Test
   void willReturnHealthyWhenCalled() {
 
-    when(jdbcTemplate.query(eq("select 1"), any(SingleColumnRowMapper.class)))
-        .thenReturn(Arrays.asList("1"));
+    when(jdbcTemplate.query(eq("select 1"), ArgumentMatchers.<SingleColumnRowMapper<Object>>any()))
+        .thenReturn(List.of("1"));
     Health health = new JdbcHealthCheck(jdbcTemplate).check();
 
     assertEquals(health, Health.up().build());
@@ -36,8 +35,8 @@ class JdbcHealthCheckTest {
   @Test
   void willReturnUnHealthyWhenCalled() {
 
-    when(jdbcTemplate.query(eq("select 1"), any(SingleColumnRowMapper.class)))
-        .thenReturn(new ArrayList());
+    when(jdbcTemplate.query(eq("select 1"), ArgumentMatchers.<SingleColumnRowMapper<Object>>any()))
+        .thenReturn(new ArrayList<>());
     Health health = new JdbcHealthCheck(jdbcTemplate).check();
 
     assertEquals(health.getStatus(), Health.down().build().getStatus());
@@ -46,7 +45,7 @@ class JdbcHealthCheckTest {
   @Test
   void willReturnUnHealthy_WhenThrowException() {
 
-    when(jdbcTemplate.query(eq("select 1"), any(SingleColumnRowMapper.class)))
+    when(jdbcTemplate.query(eq("select 1"), ArgumentMatchers.<SingleColumnRowMapper<Object>>any()))
         .thenThrow(new DataAccessException("message"){});
     Health health = new JdbcHealthCheck(jdbcTemplate).check();
 
